# ranger-transmissions

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.rst  justfile  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: cicd.yml  dependabot-automerge.yml
Xcode/Transmissions/: ContentView.swift  TransmissionContentView.swift  TransmissionDatabase.swift  TransmissionList.swift  TransmissionsApp.swift
Xcode/Transmissions.xcodeproj/: project.pbxproj
Xcode/Transmissions.xcodeproj/project.xcworkspace/xcuserdata/wsanchez.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/Transmissions.xcodeproj/xcuserdata/wsanchez.xcuserdatad/xcschemes/: xcschememanagement.plist
Xcode/TransmissionsTests/: TransmissionsTests.swift
Xcode/TransmissionsUITests/: TransmissionsUITests.swift  TransmissionsUITestsLaunchTests.swift
conf/: rtx-sample.toml
python/: README.rst  coverage.xml  mypy.ini  pyproject.toml
python/src/transmissions/ext/test/: __init__.py  test_sqlite.py
python/src/transmissions/indexer/: __init__.py  _indexer.py
python/src/transmissions/model/: _event.py  _time.py
python/src/transmissions/model/json/: __init__.py
python/src/transmissions/model/test/: __init__.py
python/src/transmissions/run/: _store.py
python/src/transmissions/store/: __init__.py  _db.py
python/src/transmissions/store/sqlite/: __init__.py  _queries.py  _store.py
python/src/transmissions/store/sqlite/schema/: 1.sqlite  2-from-1.sqlite  3-from-2.sqlite  3.sqlite
python/src/transmissions/tui/: __init__.py  _body.py  _footer.py  _header.py  _searchfield.py  _transmissiondetails.py  _transmissionlist.py
reflex/: rxconfig.py
reflex/app/: __init__.py  app.py
reflex/app/model/: _transmission.py
reflex/app/pages/: _list.py
reflex/app/pages/_list/: _page.py  _state.py  _table.py
reflex_app/: rxconfig.py
reflex_app/app/: __init__.py  app.py
reflex_app/app/model/: __init__.py  _transmission.py
reflex_app/app/pages/: __init__.py
reflex_app/app/pages/_list/: __init__.py  _filters.py  _info.py  _page.py  _state.py  _table.py
requirements/: requirements-direct.txt  requirements-mypy.txt  requirements-packaging.txt  requirements-tests.txt
src/transmissions/ext/: click.py  logger.py  parallel.py  sqlite.py
src/transmissions/ext/test/: test_sqlite.py
src/transmissions/indexer/: _indexer.py
src/transmissions/model/: __init__.py  _transmission.py  strategies.py
src/transmissions/model/json/: _json.py  _transmission.py
src/transmissions/model/test/: test_event.py
src/transmissions/run/: __init__.py  _application.py  _command.py  _search.py  _store.py
src/transmissions/search/: __init__.py  _search.py
src/transmissions/store/: __init__.py  _abc.py  _db.py  _exceptions.py
src/transmissions/store/sqlite/: _queries.py  _store.py
src/transmissions/store/sqlite/schema/: 1.sqlite  2.sqlite
src/transmissions/tui/: _application.py  _body.py  _footer.py  _header.py  _searchfield.py  _transmissiondetails.py  _transmissionlist.py  _transmissionsscreen.py  _util.py
src/transmissions/webapi/: __init__.py  _api.py  _app.py
